<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <properties>
    <neo4j.version>1.3-SNAPSHOT</neo4j.version>
    <neo4j-bdje.version>0.1-SNAPSHOT</neo4j-bdje.version>
    <geotools.version>2.7-M3</geotools.version>
    <spatial.test.osm.version>20100819</spatial.test.osm.version>
    <spatial.test.shp.version>20100819</spatial.test.shp.version>
    <bundle.namespace>org.neo4j.gis</bundle.namespace>
  </properties>

  <modelVersion>4.0.0</modelVersion>
  <artifactId>neo4j-spatial</artifactId>
  <groupId>org.neo4j</groupId>
  <version>0.4-SNAPSHOT</version>
  <name>Neo4j Spatial Components</name>
  <description>Spatial utilities and components for neo4j</description>
  <url>http://github.com/neo4j/neo4j-spatial/</url>
  <inceptionYear>February 2010</inceptionYear>

  <packaging>bundle</packaging>
  <parent>
    <artifactId>parent-pom</artifactId>
    <groupId>org.neo4j</groupId>
    <version>15</version>
  </parent>

  <scm>
    <url>git@github.com:neo4j/neo4j-spatial.git</url>
  </scm>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
          <execution>
            <id>get-test-data</id>
            <goals>
              <goal>unpack-dependencies</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.directory}</outputDirectory>
              <includeGroupIds>org.neo4j.spatial</includeGroupIds>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <developers>
    <developer>
      <id>craigtaverner</id>
      <name>Craig Taverner</name>
      <email>craig [at] amanzi.com</email>
      <timezone>+1</timezone>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
    <developer>
      <id>svzdvd</id>
      <name>Davide Savazzi</name>
      <email>davide [at] davidesavazzi.net</email>
      <timezone>+1</timezone>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
    <developer>
      <id>peterneubauer</id>
      <name>Peter Neubauer</name>
      <email>peter [at] neotechnology.com</email>
      <timezone>+1</timezone>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
  </developers>

  <licenses>
    <license>
      <name>GNU Affero General Public License, Version 3</name>
      <url>http://www.gnu.org/licenses/agpl-3.0-standalone.html</url>
    </license>
  </licenses>

  <dependencies>
    <dependency>
      <groupId>org.neo4j</groupId>
      <artifactId>neo4j-kernel</artifactId>
      <version>${neo4j.version}</version>
    </dependency>
    <dependency>
      <groupId>org.neo4j</groupId>
      <artifactId>neo4j-berkeleydb-je-index</artifactId>
      <version>${neo4j-bdje.version}</version>
    </dependency>
    <dependency>
      <groupId>org.neo4j.app</groupId>
      <artifactId>neo4j-server</artifactId>
      <version>0.6-1.3.M01</version>
      <scope>provided</scope>
      <exclusions>
      	<exclusion>
      		<artifactId>neo4j-lucene-index</artifactId>
      		<groupId>org.neo4j</groupId>
      	</exclusion>
      </exclusions>
    </dependency>
	<!--
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.8.1</version>
      <scope>provided</scope>
    </dependency>
	-->
    <dependency>
      <groupId>org.neo4j.spatial</groupId>
      <artifactId>osm-test-data</artifactId>
      <version>${spatial.test.osm.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.neo4j.spatial</groupId>
      <artifactId>shp-test-data</artifactId>
      <version>${spatial.test.shp.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.geotools</groupId>
      <artifactId>gt-main</artifactId>
      <version>${geotools.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.geotools</groupId>
      <artifactId>gt-shapefile</artifactId>
      <version>${geotools.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.geotools</groupId>
      <artifactId>gt-render</artifactId>
      <version>${geotools.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>log4j</groupId>
      <artifactId>log4j</artifactId>
      <version>1.2.14</version>
      <type>jar</type>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.googlecode.json-simple</groupId>
      <artifactId>json-simple</artifactId>
      <version>1.1</version>
      <type>jar</type>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit-dep</artifactId>
    </dependency>
    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest-all</artifactId>
    </dependency>
  </dependencies>
  <repositories>
    <repository>
      <id>osgeo</id>
      <name>Open Source Geospatial Foundation Repository</name>
      <url>http://download.osgeo.org/webdav/geotools/</url>
    </repository>
    <repository>
      <id>neo4j-public-repository</id>
      <name>Publically available Maven 2 repository for Neo4j</name>
      <url>http://m2.neo4j.org</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>

  <profiles>
    <profile>
      <id>test-default</id>
      <activation>
        <property>
          <name>env</name>
          <value>default</value>
        </property>
      </activation>
      <properties>
        <spatial.test.mode>default</spatial.test.mode>
      </properties>
    </profile>
    <profile>
      <id>test-short</id>
      <activation>
        <property>
          <name>env</name>
          <value>short</value>
        </property>
      </activation>
      <properties>
        <spatial.test.mode>short</spatial.test.mode>
      </properties>
    </profile>
    <profile>
      <id>test-dev</id>
      <activation>
        <property>
          <name>env</name>
          <value>dev</value>
        </property>
      </activation>
      <properties>
        <spatial.test.mode>dev</spatial.test.mode>
      </properties>
    </profile>
    <profile>
      <id>test-long</id>
      <activation>
        <property>
          <name>env</name>
          <value>long</value>
        </property>
      </activation>
      <properties>
        <spatial.test.mode>long</spatial.test.mode>
      </properties>
    </profile>
  </profiles>

  <reporting>
    <plugins>
      <plugin>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <groups>
            <group>
              <title>GIS and Spatial</title>
              <packages>org.neo4j.gis:org.neo4j.gis.*</packages>
            </group>
          </groups>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.5</version>
        <configuration>
          <argLine>-agentpath:"/Applications/YourKit.app/bin/mac/libyjpagent.jnilib" -server -Xms512m -Xmx2548m -XX:+UseConcMarkSweepGC</argLine>
        </configuration>
      </plugin>

    </plugins>
  </reporting>


</project>
